webservices/geapp/src/main/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cr5-webservices-v2
spec:
  selector:
    matchLabels:
      app: cr5-webservices-v2
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2 #numero maximo acima do numero de replicas
      maxUnavailable: 0 #numero maximo indisponivel
  template:
    metadata:
      labels:
        app: cr5-webservices-v2
      annotations:
        config.linkerd.io/proxy-cpu-limit: "0.1"
        config.linkerd.io/proxy-cpu-request: "0.05"
        config.linkerd.io/proxy-memory-limit: 64Mi"
        config.linkerd.io/proxy-memory-request: 64Mi
        linkerd.io/inject: enabled
    spec:
      securityContext:
        fsGroup: 1001
      volumes:
        - name: cr5-webservices-v2-settings
          configMap:
            name: cr5-webservices-v2-settings
            items:
              - key: application.properties
                path: application.properties
      initContainers: []
      containers:
        - name: cr5-webservices-v2
          image: nginx:alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: cr5-webservices-v2-settings
              mountPath: /deployments/config/application.properties
              subPath: application.properties
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /cr5-webservices/v2/q/health
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 5
            timeoutSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /cr5-webservices/v2/q/health
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 5
            timeoutSeconds: 10
            failureThreshold: 3
      terminationGracePeriodSeconds: 5
