webservices/geapp/src/main/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cr5-webservices-v2
spec:
  type: ClusterIP
  selector:
    app: cr5-webservices-v2
  ports:
    - protocol: TCP
      port: 8080
